Make gfx::Image logically const correct.

Makes a number of changes to the internal methods of gfx::Image (does
not affect its public interface).

- ImageRep and ImageStorage methods are now const where appropriate.
- AddRepresentation and GetRepresentation return const ImageRep.
- Image has a private storage() method to force its const methods to
  access |storage_| as a const object.
- Moved some Image methods into ImageStorage, and removed direct access
  to ImageStorage's representation map.
- Made ImageStorage's representation map "mutable" so it can be accessed
  from a const method.

Bug: 745355
Change-Id: I0a26c1a79fa7a12ed5b1485395f796f1352a88dc